==> RTOpen/RTRetroGame/software/firmware/boards/GameAndWatch/drivers/drv_usart.c <==
#include "drv_usart.h"
#include "board.h"
#include <rtdevice.h>
#include <rthw.h>
#include "hw_config.h"

static rt_err_t uart_configure(struct rt_serial_device *serial,
                              struct serial_configure *cfg)
{
    stm32_uart_t *dev;
    LL_USART_InitTypeDef USART_InitStruct;
    RT_ASSERT(serial != RT_NULL);
    RT_ASSERT(cfg != RT_NULL);
    dev = (stm32_uart_t *)serial->parent.user_data;
    LL_USART_StructInit(&USART_InitStruct);
    USART_InitStruct.BaudRate   = cfg->baud_rate;
    USART_InitStruct.HardwareFlowControl  = LL_USART_HWCONTROL_NONE;
    USART_InitStruct.TransferDirection       = LL_USART_DIRECTION_TX_RX;
    USART_InitStruct.OverSampling = LL_USART_OVERSAMPLING_16;
    switch (cfg->data_bits)
    {
    case DATA_BITS_8:
        USART_InitStruct.DataWidth = LL_USART_DATAWIDTH_8B;
        break;
    case DATA_BITS_9:
        USART_InitStruct.DataWidth = LL_USART_DATAWIDTH_9B;
        break;
    default:
        USART_InitStruct.DataWidth = LL_USART_DATAWIDTH_8B;
        break;
    }
    switch (cfg->stop_bits)
    {
    case STOP_BITS_1:
        USART_InitStruct.StopBits   = LL_USART_STOPBITS_1;
        break;
    case STOP_BITS_2:
        USART_InitStruct.StopBits   = LL_USART_STOPBITS_2;
        break;
    default:
        USART_InitStruct.StopBits   = LL_USART_STOPBITS_1;
        break;
    }
    switch (cfg->parity)
    {
    case PARITY_NONE:
        USART_InitStruct.Parity     = LL_USART_PARITY_NONE;
        break;
    case PARITY_ODD:
        USART_InitStruct.Parity     = LL_USART_PARITY_ODD;
        break;
    case PARITY_EVEN:
        USART_InitStruct.Parity     = LL_USART_PARITY_EVEN;
        break;
    default:
        USART_InitStruct.Parity     = LL_USART_PARITY_NONE;
        break;
    }
    if (LL_USART_Init(dev->uart,&USART_InitStruct) != SUCCESS)
    {
        return RT_ERROR;
    }
		LL_USART_Enable(dev->uart);
		
    return RT_EOK;
}

static rt_err_t uart_control(struct rt_serial_device *serial,
                            int cmd, void *arg)
{
    stm32_uart_t *dev;
    RT_ASSERT(serial != RT_NULL);
    dev = (stm32_uart_t *)serial->parent.user_data;
    switch (cmd)
    {
    case RT_DEVICE_CTRL_CLR_INT:
        /* disable rx irq */
        NVIC_DisableIRQ(dev->irq);
        /* disable interrupt */
        LL_USART_DisableIT_RXNE_RXFNE(dev->uart);
        break;
    case RT_DEVICE_CTRL_SET_INT:
        /* enable rx irq */
        NVIC_EnableIRQ(dev->irq);
        NVIC_SetPriority(dev->irq, NVIC_EncodePriority(NVIC_GetPriorityGrouping(), 5, 0));
        /* enable interrupt */
        LL_USART_EnableIT_RXNE_RXFNE(dev->uart);
        break;
    }
    return RT_EOK;
}

static int uart_putc(struct rt_serial_device *serial, char c)
{
    stm32_uart_t *dev;
    RT_ASSERT(serial != RT_NULL);
    dev = (stm32_uart_t *)serial->parent.user_data;
    while ((dev->uart->ISR & USART_ISR_TXE_TXFNF) != USART_ISR_TXE_TXFNF);
    dev->uart->TDR = c;
    return 1;
}

static int uart_getc(struct rt_serial_device *serial)
{
    int ch;
    stm32_uart_t *dev;
    RT_ASSERT(serial != RT_NULL);
    dev = (stm32_uart_t *)serial->parent.user_data;
    ch = -1;
    if (dev->uart->ISR & USART_ISR_RXNE_RXFNE)
        ch = dev->uart->RDR & 0xff;
    return ch;
}

int rt_hw_usart_init(void)
{
    stm32_uart_t *dev;
    struct serial_configure config = RT_SERIAL_CONFIG_DEFAULT;
	  RCC_Configuration();
		GPIO_Configuration();
#ifdef BSP_USING_UART1
    dev = &uart1;
    dev->uart = USART1;
    dev->irq = USART1_IRQn;
    serial1.ops    = &drv_uart_ops;
    serial1.config = config;
    /* register UART1 device */
    rt_hw_serial_register(&serial1, "uart1",
                          RT_DEVICE_FLAG_RDWR | RT_DEVICE_FLAG_INT_RX,
                          dev);
#endif /* BSP_USING_UART1 */
#ifdef BSP_USING_UART2
    dev = &uart2;
    dev->uart = USART2;
    dev->irq = USART2_IRQn;
    serial2.ops    = &drv_uart_ops;
    serial2.config = config;
    /* register UART2 device */
    rt_hw_serial_register(&serial2, "uart2",
                          RT_DEVICE_FLAG_RDWR | RT_DEVICE_FLAG_INT_RX,
                          dev);
#endif /* BSP_USING_UART1 */
#ifdef BSP_USING_UART3
    dev = &uart3;
    dev->uart = USART3;
    dev->irq = USART3_IRQn;
    serial3.ops    = &drv_uart_ops;
    serial3.config = config;
    /* register UART3 device */
    rt_hw_serial_register(&serial3, "uart3",
                          RT_DEVICE_FLAG_RDWR | RT_DEVICE_FLAG_INT_RX,
                          dev);
#endif /* BSP_USING_UART4 */
#ifdef BSP_USING_UART4
    dev = &uart4;
    dev->uart = UART4;
    dev->irq = UART4_IRQn;
    serial4.ops    = &drv_uart_ops;
    serial4.config = config;
    /* register UART4 device */
    rt_hw_serial_register(&serial4, "uart4",
                          RT_DEVICE_FLAG_RDWR | RT_DEVICE_FLAG_INT_RX,
                          dev);
#endif /* BSP_USING_UART4 */
#ifdef BSP_USING_UART5
    dev = &uart5;
    dev->uart = UART5;
    dev->irq = UART5_IRQn;
    serial5.ops    = &drv_uart_ops;
    serial5.config = config;
    /* register UART5 device */
    rt_hw_serial_register(&serial5, "uart5",
                          RT_DEVICE_FLAG_RDWR | RT_DEVICE_FLAG_INT_RX,
                          dev);
#endif /* BSP_USING_UART5 */
#ifdef BSP_USING_UART6
    dev = &uart6;
    dev->uart = USART6;
    dev->irq = USART6_IRQn;
    serial6.ops    = &drv_uart_ops;
    serial6.config = config;
    /* register UART6 device */
    rt_hw_serial_register(&serial6, "uart6",
                          RT_DEVICE_FLAG_RDWR | RT_DEVICE_FLAG_INT_RX,
                          dev);
#endif /* BSP_USING_UART6 */
#ifdef BSP_USING_UART7
    dev = &uart7;
    dev->uart = UART7;
    dev->irq = UART7_IRQn;
    serial7.ops    = &drv_uart_ops;
    serial7.config = config;
    /* register UART7 device */
    rt_hw_serial_register(&serial7, "uart7",
                          RT_DEVICE_FLAG_RDWR | RT_DEVICE_FLAG_INT_RX,
                          dev);
#endif /* BSP_USING_UART7 */
#ifdef BSP_USING_UART8
    dev = &uart8;
    dev->uart = UART8;
    dev->irq = UART8_IRQn;
    serial8.ops    = &drv_uart_ops;
    serial8.config = config;
    /* register UART8 device */
    rt_hw_serial_register(&serial8, "uart8",
                          RT_DEVICE_FLAG_RDWR | RT_DEVICE_FLAG_INT_RX,
                          dev);
#endif /* BSP_USING_UART8 */
    return 0;
}
